[gd_scene load_steps=33 format=3 uid="uid://dah780b2oxa5u"]

[ext_resource type="PackedScene" uid="uid://dk1hh2gdvpe7u" path="res://assets/models/testtrack.blend" id="1_bie2y"]
[ext_resource type="Script" path="res://scripts/track.gd" id="1_tkx47"]
[ext_resource type="Theme" uid="uid://dx6m21m2e8ni0" path="res://assets/normal.tres" id="2_htakq"]
[ext_resource type="PackedScene" uid="uid://bwsgksn5sba8h" path="res://scenes/aiKart.tscn" id="2_ncjig"]
[ext_resource type="Texture2D" uid="uid://dp4r2eyb75dwb" path="res://assets/sprite/timerenclosure.png" id="3_qmt2k"]
[ext_resource type="PackedScene" uid="uid://biuba22ol7yd5" path="res://scenes/kart.tscn" id="3_v3qel"]
[ext_resource type="PackedScene" uid="uid://rji30exvqmg5" path="res://scenes/levelTransition.tscn" id="5_0j2n4"]
[ext_resource type="PackedScene" uid="uid://dxaa2k2d5ieqw" path="res://scenes/minimap.tscn" id="7_584yv"]
[ext_resource type="PackedScene" uid="uid://olrqjglx2cq" path="res://scenes/race_start.tscn" id="8_yqg6k"]
[ext_resource type="Script" path="res://scripts/forcetransitionout.gd" id="9_ebf88"]
[ext_resource type="Shader" path="res://scripts/water.gdshader" id="10_7v7fx"]
[ext_resource type="PackedScene" uid="uid://dldplw2o048gd" path="res://scenes/level_preview_spin.tscn" id="11_8irkd"]
[ext_resource type="Shader" path="res://scripts/coolsquares.gdshader" id="13_qdurp"]
[ext_resource type="Shader" path="res://scripts/spikebubble.gdshader" id="14_834d7"]
[ext_resource type="Texture2D" uid="uid://d4fsgob3mq7cv" path="res://assets/sprite/speechBubble.png" id="14_txqxt"]
[ext_resource type="Texture2D" uid="uid://bhf561ftsguqu" path="res://assets/sprite/bossman.png" id="15_vh8nr"]
[ext_resource type="Texture2D" uid="uid://bguvq3ac1i2se" path="res://assets/sprite/moustache.png" id="16_fs8vp"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xy3eh"]
sky_top_color = Color(0.19, 0.811, 1, 1)
sky_horizon_color = Color(0.8, 0.876667, 1, 1)
sky_curve = 0.0955921
ground_bottom_color = Color(0.06, 0.06, 0.06, 1)
ground_horizon_color = Color(0.2542, 0.394423, 0.62, 1)
ground_energy_multiplier = 1.79
sun_curve = 48410.7

[sub_resource type="Sky" id="Sky_euqx2"]
sky_material = SubResource("ProceduralSkyMaterial_xy3eh")

[sub_resource type="Environment" id="Environment_hhrjw"]
background_mode = 2
sky = SubResource("Sky_euqx2")
glow_enabled = true
glow_intensity = 0.28
glow_bloom = 0.08
glow_hdr_threshold = 0.24
fog_light_color = Color(0.85, 0.98, 1, 1)
fog_light_energy = 0.49
fog_density = 0.0
adjustment_enabled = true
adjustment_brightness = 1.17
adjustment_contrast = 1.17
adjustment_saturation = 1.17

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_vyo1u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yljbs"]
albedo_color = Color(0, 0, 0.13, 1)

[sub_resource type="Curve3D" id="Curve3D_p6gfj"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -7.52908, 0, -160.369, 0, 0, 0, 0, 0, 0, 26.3517, 0, -170.91, 0, 0, 0, 0, 0, 0, 36.8925, 0, -170.157, 0, 0, 0, 0, 0, 0, 57.9739, 0, -161.875, 0, 0, 0, 0, 0, 0, 102.395, 0, -124.23, 0, 0, 0, 0, 0, 0, 118.959, 0, -105.407, 0, 0, 0, 0, 0, 0, 130.253, 0, -94.1135, 0, 0, 0, 0, 0, 0, 144.558, 0, -86.5844, 0, 0, 0, 0, 0, 0, 213.073, 0, -65.503, 0, 0, 0, 0, 0, 0, 228.884, 0, -51.1977, 0, 0, 0, 0, 0, 0, 232.648, 0, -30.8692, 0, 0, 0, 0, 0, 0, 228.884, 0, -9.03489, 0, 0, 0, 0, 0, 0, 201.026, 0, 19.5756, 0, 0, 0, 0, 0, 0, 124.23, 0, 38.3983, 0, 0, 0, 0, 0, 0, 111.275, 0, 44.3503, 0, 0, 0, 0, 0, 0, 96.3722, 0, 51.1977, 0, 0, 0, 0, 0, 0, 91.8548, 0, 57.9739, 0, 0, 0, 0, 0, 0, 80.5612, 0, 71.9546, 0, 0, 0, 0, 0, 0, 58.7268, 0, 147.57, 0, 0, 0, 0, 0, 0, 44.4216, 0, 163.381, 0, 0, 0, 0, 0, 0, 27.8575, 0, 173.922, 0, 0, 0, 0, 0, 0, 6.02325, 0, 185.968, 0, 0, 0, 0, 0, 0, -6.02325, 0, 185.968, 0, 0, 0, 0, 0, 0, -29.3634, 0, 185.968, 0, 0, 0, 0, 0, 0, -49.6919, 0, 185.968, 0, 0, 0, 0, 0, 0, -77.5495, 0, 179.885, 0, 0, 0, 0, 0, 0, -90.3489, 0, 174.525, 0, 0, 0, 0, 0, 0, -103.148, 0, 167.598, 0, 0, 0, 0, 0, 0, -112.936, 0, 159.033, 0, 0, 0, 0, 0, 0, -122.724, 0, 147.57, 0, 0, 0, 0, 0, 0, -130.253, 0, 134.018, 0, 0, 0, 0, 0, 0, -134.159, 0, 117.454, 0, 0, 0, 0, 0, 0, -128.506, 0, 85.0251, 0, 0, 0, 0, 0, 0, -108.419, 0, 39.8629, 0, 0, 0, 0, 0, 0, -82.067, 0, 19.7278, 0, 0, 0, 0, 0, 0, -44.8485, 0, 1.79395, 0, 0, 0, 0, 0, 0, -28.4041, 0, -21.5273, 0, 0, 0, 0, 0, 0, -27.5071, 0, -63.6849, 0, 0, 0, 0, 0, 0, -37.6319, 0, -106.255, 0, 0, 0, 0, 0, 0, -37.0784, 0, -126.177, 0, 0, 0, 0, 0, 0, -32.6512, 0, -136.692, 0, 0, 0, 0, 0, 0, -23.2432, 0, -149.974, 0, 0, 0, 0, 0, 0, -7.52908, 0, -160.369),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 43

[sub_resource type="LabelSettings" id="LabelSettings_buy3n"]
font_size = 128
outline_size = 12
outline_color = Color(0, 0, 0, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="CylinderMesh" id="CylinderMesh_y3rjy"]
top_radius = 300.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3mlf5"]
render_priority = 0
shader = ExtResource("10_7v7fx")
shader_parameter/cell_amount = 40
shader_parameter/period = Vector2(5, 10)
shader_parameter/albedo = Color(0, 0.733333, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mjccq"]
shader = ExtResource("13_qdurp")

[sub_resource type="LabelSettings" id="LabelSettings_kjhoa"]
font_size = 128
outline_size = 12
outline_color = Color(0, 0, 0, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_o5fmy"]
font_size = 64
outline_size = 12
outline_color = Color(0, 0, 0, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_alm87"]
shader = ExtResource("14_834d7")

[sub_resource type="LabelSettings" id="LabelSettings_7qbxk"]
font_size = 50
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_nmors"]
font_size = 64
font_color = Color(1, 0.8, 0, 1)
outline_size = 12
outline_color = Color(0, 0, 0, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[node name="Game" type="Node3D" node_paths=PackedStringArray("playerKart")]
script = ExtResource("1_tkx47")
playerKart = NodePath("PlayerKart")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.36608, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hhrjw")

[node name="StaticBody3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.17173, 0)
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_vyo1u")

[node name="testtrack" parent="." instance=ExtResource("1_bie2y")]

[node name="BezierCircle" parent="testtrack" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_yljbs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.787086, 0.616844, -2.3457e-08, -0.494911, 0.631501, 0.596883, 0.368184, -0.469798, 0.802328, 0, 72.3031, 0)
shadow_enabled = true
shadow_normal_bias = 10.0
shadow_blur = 0.0

[node name="Kart" parent="." node_paths=PackedStringArray("path") instance=ExtResource("2_ncjig")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 88.3115, 1.94338, 56.3164)
path = NodePath("../Path3D")

[node name="Kart3" parent="." node_paths=PackedStringArray("path") instance=ExtResource("2_ncjig")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 81.7197, 1.94338, 69.7726)
path = NodePath("../Path3D")

[node name="Kart4" parent="." node_paths=PackedStringArray("path") instance=ExtResource("2_ncjig")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 88.3115, 5.70691, 56.3164)
path = NodePath("../Path3D")

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_p6gfj")

[node name="PlayerKart" parent="." instance=ExtResource("3_v3qel")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 97.6112, 7.75664, 51.0916)

[node name="TrackUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_htakq")

[node name="TimerContainer" type="TextureRect" parent="TrackUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -128.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_qmt2k")

[node name="Timer" type="Label" parent="TrackUI/TimerContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "3:00"
label_settings = SubResource("LabelSettings_buy3n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Minimap" parent="TrackUI" node_paths=PackedStringArray("path3d", "Level") instance=ExtResource("7_584yv")]
layout_mode = 1
zoomOut = 0.45
path3d = NodePath("../../Path3D")
Level = NodePath("../..")
offset = Vector2(-30, 0)

[node name="RaceStart" parent="." instance=ExtResource("8_yqg6k")]

[node name="Level Transition" parent="RaceStart" instance=ExtResource("5_0j2n4")]
layout_mode = 1
script = ExtResource("9_ebf88")

[node name="ocean" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.39284, 0)
mesh = SubResource("CylinderMesh_y3rjy")
surface_material_override/0 = SubResource("ShaderMaterial_3mlf5")

[node name="LevelPreviewSpin" parent="." instance=ExtResource("11_8irkd")]

[node name="WinLose" type="Control" parent="."]
process_mode = 4
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_htakq")

[node name="EverythingElse" type="SubViewportContainer" parent="WinLose"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="WinLose/EverythingElse"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 0

[node name="Cam" type="Camera3D" parent="WinLose/EverythingElse/SubViewport"]

[node name="ColorRect" type="ColorRect" parent="WinLose"]
material = SubResource("ShaderMaterial_mjccq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Karts" type="SubViewportContainer" parent="WinLose"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="WinLose/Karts"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 0

[node name="Cam" type="Node3D" parent="WinLose/Karts/SubViewport"]

[node name="ActualCamera" type="Camera3D" parent="WinLose/Karts/SubViewport/Cam"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
cull_mask = 2

[node name="Lose" type="Control" parent="WinLose"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lost" type="Label" parent="WinLose/Lose"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -440.0
offset_top = 64.0
offset_right = -63.0
offset_bottom = 160.0
grow_horizontal = 0
text = "You lost..."
label_settings = SubResource("LabelSettings_kjhoa")

[node name="Lost2" type="Label" parent="WinLose/Lose"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -592.0
offset_top = 184.0
offset_right = -68.0
offset_bottom = 436.0
grow_horizontal = 0
text = "Try harder next time.
"
label_settings = SubResource("LabelSettings_o5fmy")
horizontal_alignment = 2
autowrap_mode = 2

[node name="Button" type="Button" parent="WinLose/Lose"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -128.0
offset_right = -67.0
offset_bottom = -76.0
grow_horizontal = 0
grow_vertical = 0
text = "Continue?"

[node name="Win" type="Control" parent="WinLose"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="win" type="Label" parent="WinLose/Win"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -440.0
offset_top = 64.0
offset_right = -63.0
offset_bottom = 160.0
grow_horizontal = 0
text = "We have a winner!"
label_settings = SubResource("LabelSettings_kjhoa")

[node name="info" type="Label" parent="WinLose/Win"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -728.0
offset_top = 184.0
offset_right = -68.0
offset_bottom = 436.0
grow_horizontal = 0
text = "Neat."
label_settings = SubResource("LabelSettings_o5fmy")
horizontal_alignment = 2
autowrap_mode = 2

[node name="Button" type="Button" parent="WinLose/Win"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -128.0
offset_right = -67.0
offset_bottom = -76.0
grow_horizontal = 0
grow_vertical = 0
text = "Continue?"

[node name="TollBoothCheck" type="Control" parent="WinLose"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bubble" type="TextureRect" parent="WinLose/TollBoothCheck"]
material = SubResource("ShaderMaterial_alm87")
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -256.0
offset_right = 256.0
grow_vertical = 0
texture = ExtResource("14_txqxt")

[node name="Boss" type="TextureRect" parent="WinLose/TollBoothCheck/Bubble"]
layout_mode = 0
offset_left = -8.0
offset_top = -56.0
offset_right = 248.0
offset_bottom = 200.0
texture = ExtResource("15_vh8nr")

[node name="Moustache" type="TextureRect" parent="WinLose/TollBoothCheck/Bubble/Boss"]
layout_mode = 0
offset_left = 168.0
offset_top = 72.0
offset_right = 208.0
offset_bottom = 112.0
pivot_offset = Vector2(20, 20)
texture = ExtResource("16_fs8vp")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="WinLose/TollBoothCheck"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_top = -200.0
offset_right = 583.0
offset_bottom = -119.0
grow_vertical = 0
text = "We need more money.
Race again."
label_settings = SubResource("LabelSettings_7qbxk")

[node name="Money" type="Label" parent="WinLose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -23.0
offset_right = 172.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(222, 27)
text = "Money Made: 000000"
label_settings = SubResource("LabelSettings_nmors")

[connection signal="body_entered" from="StaticBody3D" to="." method="_on_static_body_3d_body_entered"]
[connection signal="pressed" from="WinLose/Lose/Button" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="WinLose/Win/Button" to="." method="_on_continue_pressed"]

[editable path="testtrack"]
